# Haskell-crawler

./: .gitignore  LICENSE  shadow-library.cabal  stack.yaml
ShadowLibrary/: Core.hs
app/: almanachmuszyny.hs  edukacjaustawiczna.hs  pbsociety.hs
