name:                shadow-library
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             Proprietary
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     ShadowLibrary.Core
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , hxt
                     , hxt-http
                     , hxt-xpath
                     , MissingH
                     , monad-logger
                     , mtl
                     , network-uri
                     , regex-pcre
                     , regex-tdfa
                     , resourcet
                     , text
                     , time
                     , transformers
                     , tz
  default-language:    Haskell2010

-- executable maly-modelarz-exe
--    hs-source-dirs:      app
--    main-is:             malymodelarz.hs
--    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--    build-depends:       base
--                       , hxt
--                       , hxt-curl
--                       , hxt-xpath
--                       , MissingH
--                       , regex-posix
--                       , shadow-library
--    default-language:    Haskell2010

executable almanachmuszyny
   hs-source-dirs:      app
   main-is:             almanachmuszyny.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , hxt
                      , hxt-xpath
                      , MissingH
                      , regex-posix
                      , shadow-library
   default-language:    Haskell2010

executable pbsociety
   hs-source-dirs:      app
   main-is:             pbsociety.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , hxt
                      , hxt-xpath
                      , MissingH
                      , regex-posix
                      , shadow-library
   default-language:    Haskell2010

executable edu
   hs-source-dirs:      app
   main-is:             edukacjaustawiczna.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , hxt
                      , hxt-xpath
                      , MissingH
                      , regex-posix
                      , shadow-library
   default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/huntekah/Haskell-crawler

